train-50
  * fix(server): refactor account promise chains to named functions
  * refactor(locale): sync new locale list
  * fix(locale): reenable pt-PT locale
  * fix(mail): update email support url
  * feat(oauth): pass email=false when verifying oauth tokens
  * fix(oauth): look for the correct 'scope' param in oauth response
  * feat(server): implement device registration api

train-49
  * feat(profile): Add oauth-authenticated /account/profile endpoint
  * fix(tests): Eliminate race condition in teardown of concurrent_tests
  * fix(tests): wait for email delivery in concurrent_tests
  * fix(e2e-email): update for sr localization of subject
  * chore(build): Switch to grunt-nsp

train-48.3
  * fix(startup): if error on startup, log and exit

train-48.2
  * fix(deps): shrinkwrap also missing hawk, simplesmtp, wtf?

train-48.1
  * fix(deps): shrinkwrap excludes fxa-jwtool->pem-jwk dep if pem-jwk is a devDep #1085

train-48
  * fix(email): stop sending new sync device emails #1084
  * refactor(basket): move basket event processing into separate repo #1073
  * feat(server): support stricter access-control origin on most endpoints #1078
  * updated dependencies

train-47.1
 * chore(e2e-email): updates for train-47 state of l10n
 * chore(l10n): language value in l10n file changed from "sr" to "sr-Latn"
 * chore(shrinkwrap): update shrinkwrap, principally for fxa-auth-mailer and fxa-content-server-l10n

train-47
  * feat(metrics): send account verification time to statsd #1066
  * feat(i18n): enable Romainian `ro` support #1071
  * feat(keys): allow multiple public keys #1064

train-46
  * feat(logging): add createdAt to account.signed activity event #1056
  * feat(basket): send sync login events to basket #1051
  * fix(logging): use service query parameter in activityEvent #1051
  * feat(email): added post verify email #1034
  * fix(tests): e2e-email changes for "Firefox Account Verified" in train-46 #1063